<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_activity_controller.car_selection.CarSelect">

    <TextView
        android:id="@+id/chooseCarText"
        style="@style/standard_text"
        android:text="@string/choose_car_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226"
        />

    <Button
        android:id="@+id/connectToCarButton"
        style="@style/standard_button"
        android:text="@string/connect_to_car_text"
        android:drawableStart="@drawable/ic_wifi_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919"
        />

    <ListView
        android:id="@+id/smartCarList"
        style="@style/standard_list"
        android:layout_width="305dp"
        android:choiceMode="singleChoice"
        android:layout_height="309dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/infoButton"
        style="@style/standard_button"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:drawableStart="@drawable/ic_info_outline_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>