<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/standard_list_item"
    android:descendantFocusability="blocksDescendants">


    <Button
        android:id="@+id/list_button"
        style="@style/edit_button"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/list_text"
        android:layout_width="310dp"
        android:layout_height="585dp"
        android:layout_alignTop="@id/list_button"
        android:layout_alignBottom="@id/list_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_toStartOf="@+id/list_button"
        android:gravity="center_vertical"
        android:textIsSelectable="false"
        android:textSize="16sp"
        tools:text="@string/car_name" />
</RelativeLayout>
