...
    style="@style/standard_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_activity_controller.ManualControl">

    <TextView
        android:id="@+id/manualControlHeaderText"
        style="@style/standard_text"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintHorizontal_bias="0.498"
...
